@@ -1,3 +1,8 @@
+2013-05-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/57331
+	* gcc.c-torture/compile/pr57331.c: New test.
+
 2013-05-21  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/57330
